Small updates to L7 slides

--- a/classNotes/7-strings/slides-7-strings.html
+++ b/classNotes/7-strings/slides-7-strings.html
@@ -374,11 +374,21 @@ str_to_upper(a) == str_to_upper(b)
 ---
 # Get the number of characters in a string
 
-`str_length()`
-&lt;br&gt;
+--
+What will this return?
+
+```r
+length("hello world")
+```
+--
+
+```
+## [1] 1
+```
 &lt;br&gt;
 
 --
+To get the # of characters, use `str_length()`:
 
 ```r
 str_length("hello world")
@@ -567,6 +577,8 @@ str_to_upper(x)
 - `str_to_upper()`
 - `str_sub()`
 - `str_dup()`
+
+**Hint**: You may want to create intermediate variables
 
 ---
 # Remove excess white space
@@ -877,6 +889,35 @@ y &lt;- c('hello', 'world')
 - `str_split()`
 
 ---
+# Practice: Think-Pair-Share
+
+`getUniqueChars(s)`
+
+Write a function that takes a single string, `s`, and returns an _alphabetically sorted_ vector of the unique characters the string below. All letters should be lowercase (so `"A"` should be treated the same as `"a"`).
+
+Example:
+
+```r
+s &lt;- 'babbleScrabbleApple'
+getUniqueChars(s) == c("a","b","c","e","l","p","r","s")
+```
+
+Hints:
+
+- Use `str_split()` to break a string into characters
+- Check out the `unique()` function
+
+--
+
+```r
+getUniqueChars &lt;- function(s) {
+    s &lt;- str_to_lower(s)
+    chars &lt;- str_split(s, "")[[1]] # Split the string into characters
+    return(str_sort(unique(chars)))
+}
+```
+
+---
 # 5 minute break - stand up, move around, stretch!
 
 ### [5 minutes](https://www.youtube.com/watch?v=_W0bSen8Qjg)
@@ -1028,6 +1069,7 @@ tenFruit
 &lt;br&gt;
 
 --
+**Wrong**:
 
 ```r
 str_detect(tenFruit, "a")
@@ -1039,6 +1081,7 @@ str_detect(tenFruit, "a")
 &lt;br&gt;
 
 --
+**Right**:
 
 ```r
 str_detect(tenFruit, "^a")
@@ -1068,6 +1111,7 @@ tenFruit
 &lt;br&gt;
 
 --
+**Wrong**:
 
 ```r
 str_detect(tenFruit, "e")
@@ -1079,6 +1123,7 @@ str_detect(tenFruit, "e")
 &lt;br&gt;
 
 --
+**Right**:
 
 ```r
 str_detect(tenFruit, "e$")
@@ -1143,7 +1188,7 @@ head(fruit)
 
 2) Use `stringr` functions to answer the following questions about the `fruit` vector:
 
-- How many fruit have the string `"berry"` in it?
+- How many fruit have the string `"rr"` in it?
 - Which fruit end with string `"fruit"`?
 - Which fruit contain more than one `"o"` character?
 
@@ -1222,35 +1267,6 @@ str_replace_all(x, "_", " ")
 
 ```
 ## [1] "this is good practice"
-```
-
----
-# Practice: Think-Pair-Share
-
-`getUniqueChars(s)`
-
-Write a function that takes a single string, `s`, and returns an _alphabetically sorted_ vector of the unique characters the string below. All letters should be lowercase (so `"A"` should be treated the same as `"a"`).
-
-Example:
-
-```r
-s &lt;- 'babbleScrabbleApple'
-getUniqueChars(s) == c("a","b","c","e","l","p","r","s")
-```
-
-Hints:
-
-- Use `str_split()` to break a string into characters
-- Check out the `unique()` function
-
---
-
-```r
-getUniqueChars &lt;- function(s) {
-    s &lt;- str_to_lower(s)
-    chars &lt;- str_split(s, "")[[1]] # Split the string into characters
-    return(str_sort(unique(chars)))
-}
 ```
 
 ---
