Announcement updates to L7 slides

--- a/classNotes/7-strings/slides-7-strings.html
+++ b/classNotes/7-strings/slides-7-strings.html
@@ -33,22 +33,30 @@ class: center, middle, inverse, title-slide
 # Announcements
 
 --
-1) If you haven't already, install the **stringr** library:
+### 1) You have **3** weeks for HW 4
+&lt;br&gt;
+
+--
+### 2) Exam 1:
+
+- ### 100 minutes (1 hr 40 min)
+- ### Weeks 1-6 (no strings)
+- ### No Turtle Graphics
+
+&lt;br&gt;
+
+--
+###  3) **This week**: Instead of office hours, we'll have an exam review
+
+---
+# Install the `stringr` library
+
 
 ```r
 install.packages("stringr")
 library(stringr)
 ```
 
-&lt;br&gt;
-
---
-2) You have **3** weeks for HW 4
-&lt;br&gt;
-&lt;br&gt;
-
---
-3) **This week**: Instead of office hours, we'll have an exam review
 
 ---
 # Making a string
