--- a/classNotes/exam1review/exam1review.html
+++ b/classNotes/exam1review/exam1review.html
@@ -417,9 +417,35 @@ FNAME &lt;- function(ARG1, ARG2, ETC) {
 --
 How I remember this:
 
-&lt;img src="images/function_sytax_memory.png" width="700"&gt;
+|"function name" | is a | function   | of ()               | that does...  |
+|:---------------|:-----|:-----------|:--------------------|:--------------|
+|`FNAME`         | `&lt;-` | `function` | `(ARG1, ARG2, ETC)` | `{}`          |
+
+---
+# Functions
+
+
+```r
+FNAME &lt;- function(ARG1, ARG2, ETC) {
+    STATEMENT1
+    STATEMENT2
+    return(VALUE)
+}
+```
 &lt;br&gt;
+
+How I remember this:
+
+|"function name" | is a | function   | of ()               | that does...  |
+|:---------------|:-----|:-----------|:--------------------|:--------------|
+|`FNAME`         | `&lt;-` | `function` | `(ARG1, ARG2, ETC)` | `{}`          |
+
 &lt;br&gt;
+Example:
+
+|"function name" | is a | function   | of () | that does...              |
+|:---------------|:-----|:-----------|:------|:--------------------------|
+|`mySqrt`        | `&lt;-` | `function` | `(n)` | `{ return(n^0.5) }`       |
 
 ---
 # Test Functions
