Added dplyr cheat sheet graphics to W11 class notes

--- a/classNotes/11-data-wrangling/slides-11-data-wrangling.html
+++ b/classNotes/11-data-wrangling/slides-11-data-wrangling.html
@@ -104,6 +104,15 @@ spicegirls
 ---
 # Select columns with `select()`
 
+&lt;br&gt;
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/rstudio-cheatsheet-select.png" width="800"&gt;
+&lt;/center&gt;
+
+---
+# Select columns with `select()`
+
 Example: Select the columns `firstName` &amp; `lastName`
 &lt;br&gt;
 
@@ -209,6 +218,15 @@ select(spicegirls, ends_with('name'))
 ## 4 Geri      Halliwell
 ## 5 Victoria  Beckham
 ```
+
+---
+# Select rows with `filter()`
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/rstudio-cheatsheet-filter.png" width="800"&gt;
+&lt;/center&gt;
 
 ---
 # Select rows with `filter()`
@@ -583,6 +601,15 @@ spicegirls %&gt;%
 ---
 # Create new variables with `mutate()`
 
+&lt;br&gt;
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/rstudio-cheatsheet-mutate.png" width="800"&gt;
+&lt;/center&gt;
+
+---
+# Create new variables with `mutate()`
+
 Example: Compute the age of each band member from `yearOfBirth`
 &lt;br&gt;
 
@@ -717,6 +744,15 @@ BONUS: Use the `incident_month` variable to create a new variable `season`, whic
 
 ---
 # Split-apply-combine with `group_by`
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/rstudio-cheatsheet-group_by.png" width="800"&gt;
+&lt;/center&gt;
+
+---
+# Split-apply-combine with `group_by`
 &lt;br&gt;
 
 
@@ -820,6 +856,15 @@ bands %&gt;%
 ## 8 Ringo     Starr            1940 FALSE    beatles       79     77.8
 ## 9 George    Harrison         1943 TRUE     beatles       76     77.8
 ```
+
+---
+# Summarize data frames with `summarise()`
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/rstudio-cheatsheet-summarise.png" width="800"&gt;
+&lt;/center&gt;
 
 ---
 # Summarize data frames with `summarise()`
