--- a/classNotes/12-data-visualization/slides-12-data-visualization.html
+++ b/classNotes/12-data-visualization/slides-12-data-visualization.html
@@ -676,6 +676,11 @@ Use the `mtcars` data frame to create the following plots
 Use the `mpg` data frame to create the following plot
 
 &lt;img src="slides-12-data-visualization_files/figure-html/mtcars_4-1.png" width="576" /&gt;
+
+---
+# HW 6
+
+### Complete parts 1 - 3 by next week!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
